ammended header file

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
 }
 
 /*----------Headings----------*/
-#Home {
+.home {
     background-color: purple;
     font-style: italic;
     text-align: center;
